--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,7 @@
                 <!--begin col-md-12 -->
                 <div class="col-md-12 text-center">
                    
-                    <p>Copyright © 2019 Essentials. Designed by <a href="https://themeforest.net/user/epic-themes/portfolio?ref=Epic-Themes" target="_blank">Epic-Themes</a></p>
+                    <p>Copyright 2025-2099 <a href="https://serrenta.com/">Serrenta Corporation</a>/<a href="https://robbcg.com/">Robb Consulting Group Corporation</a>. All Rights Reserved! Website created by <a href="https://robbcre.com/">Robb Creative Group Corporation</a>. Web hosting by <a href="https://hostrobb.com/">HostRobb</a>.</p>
                                          
                     <!--begin footer_social -->
                     <ul class="footer_social">
