--- a/index.html
+++ b/index.html
@@ -1416,15 +1416,15 @@
 
 					<h4>How to find us</h4>
 
-                    <iframe class="contact-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9050207912896!2d-0.14675028449633118!3d51.514958479636384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761ad554c335c1%3A0xda2164b934c67c1a!2sOxford+St%2C+London%2C+UK!5e0!3m2!1sen!2sro!4v1485889312335" width="600" height="270" style="border:0" allowfullscreen></iframe>
+                    <iframe class="contact-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.74798094829!2d-73.98809610906481!3d40.74043546211352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a7550271dd%3A0xec88233d3a5d270f!2sBaruch%20College!5e1!3m2!1sen!2sus!4v1737829181492!5m2!1sen!2sus" width="600" height="270" style="border:0" allowfullscreen></iframe>
 
 					<h5>Head Office</h5>
 
-                    <p class="contact-info"><i class="fas fa-map-marker-alt"></i> 10 Oxford Street, London, UK, E1 1EC</p>
+                    <p class="contact-info"><i class="fas fa-map-marker-alt"></i> 55 Lexington Ave, New York, NY 10010</p>
                     
-                    <p class="contact-info"><i class="fas fa-envelope"></i> <a href="mailto:contact@youremail.com">office@essentials.co.uk</a></p>
+                    <p class="contact-info"><i class="fas fa-envelope"></i> <a href="mailto:biz@soapahapp.com">biz@soapahapp.com</a></p>
                     
-                    <p class="contact-info"><i class="fas fa-phone"></i> +44 987 654 321</p>
+                    <p class="contact-info"><i class="fas fa-phone"></i> +315.277.3691</p>
 
 				</div>
 				<!--end col-md-6 -->
