--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<!--begin col-md-6-->
 	            <div class="col-md-6">
 
-	          	<img src="C:\Users\roman\Desktop\soapahapp\images\heropic.png" class="hero-image width-100" alt="heropic">
+	          	<img src="images\heropic.png" class="hero-image width-100" alt="heropic">
 
     </section>
     <!--end home section -->
