--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <title>Essentials - SaaS Landing Page Template</title>
+    <title>Soapah - The #1 App For Soap Makers!</title>
     
     <!-- Loading Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
