--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                     
                     <p class="contact-info"><i class="fas fa-envelope"></i> <a href="mailto:biz@soapahapp.com">biz@soapahapp.com</a></p>
                     
-                    <p class="contact-info"><i class="fas fa-phone"></i> +1315.277/3691</p>
+                    <p class="contact-info"><i class="fas fa-phone"></i> +1315.277.3691</p>
 
 				</div>
 				<!--end col-md-6 -->
