--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <!--begin col-md-12-->
                 <div class="col-md-12 text-center padding-bottom-10">
 
-                    <h2 class="section-title">Amazing Features</h2>
+                    <h2 class="section-title">Soapah's Amazing Features</h2>
 
                     <p class="section-subtitle">There are many variations of passages of Lorem Ipsum available, but the majority<br>have suffered alteration, by injected humour, or new randomised words.</p>
 
@@ -290,7 +290,7 @@
 
                         <i class="fas fa-tachometer-alt"></i>
 
-                        <h4>Powerful Dashboard</h4>
+                        <h4>Guided Formulation</h4>
 
                         <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
 
@@ -305,7 +305,7 @@
 
                         <i class="fas fa-chart-line"></i>
 
-                        <h4>User Friendly</h4>
+                        <h4>Soap Calculator</h4>
 
                         <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
 
@@ -320,7 +320,7 @@
 
                         <i class="fas fa-bell"></i>
 
-                        <h4>Smart Notifications</h4>
+                        <h4>Ask An Expert</h4>
 
                         <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
 
@@ -341,7 +341,7 @@
 
                         <i class="fas fa-hand-holding-usd"></i>
 
-                        <h4>Cost Control</h4>
+                        <h4>Calendar</h4>
 
                         <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
 
@@ -356,7 +356,7 @@
 
                         <i class="fas fa-rocket"></i>
 
-                        <h4>Unique Features</h4>
+                        <h4>Batch Record</h4>
 
                         <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
 
@@ -371,7 +371,7 @@
 
                         <i class="fab fa-rocketchat"></i>
 
-                        <h4>Support 24/7</h4>
+                        <h4>Give Feedback</h4>
 
                         <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
 
