--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                             <li><a href="#contact">CONTACT</a></li>
 
-                            <li class="discover-link"><a href="#" class="external discover-btn">Login</a></li>
+                            <li class="discover-link"><a href="#" class="external discover-btn">Facebook Page</a></li>
 
                         </ul>
                         <!--end navbar-nav -->
