--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <nav class="navbar navbar-expand-lg">
 
                     <!--begin logo -->
-                    <a class="navbar-brand" href="#">Soapah</a>
+                    <a href="https://soapahapp.com"><img src="images\soapahlogo.png" alt="Soapah Logo" style="width:300px;height:auto"></a>
+                    <!-- <a class="navbar-brand" href="#">Soapah</a> -->
                     <!--end logo -->
 
                     <!--begin navbar-toggler -->
