--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 	          		<p>Soapah was designed for you, the soapmaker, to elevate your soapmaking skills. Download today!</p>
 
-	        		<a href="#" class="fa-brands fa-android btn-blue scrool"> Android</a>
+	        		<a href="#" class="fa-brands fa-android btn-blue scrool"> Android</a><br><br>
                     <a href="#" class="fa-brands fa-apple btn-green scrool"> IOS</a>
 
 	            </div>
@@ -555,7 +555,7 @@
                 <!--begin col-md-6-->
                 <div class="col-md-6">
 
-                    <img src="http://placehold.it/800x630" class="hero-image width-100 box-shadow" alt="pic">
+                    <img src="images\footerpic.png" class="hero-image width-100 box-shadow" alt="footerpic">
 
                 </div>
                 <!--end col-sm-6-->
