--- a/index.html
+++ b/index.html
@@ -710,38 +710,44 @@
                     <ul class="footer_social">
 
                         <li>
-                            <a href="#">
+                            <a href="https://serrenta.com/">
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
-                                <i class="fab fa-pinterest"></i>
+                            <a href="https://serrenta.com/">
+                                <i class="fab fa-youtube"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
+                            <a href="https://serrenta.com/">
                                 <i class="fab fa-facebook-square"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
+                            <a href="https://serrenta.com/">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
-                                <i class="fab fa-skype"></i>
+                            <a href="https://serrenta.com/">
+                                <i class="fab fa-tiktok"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="#">
-                                <i class="fab fa-dribble"></i>
+                            <a href="https://serrenta.com/">
+                                <i class="fab fa-discord"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://serrenta.com/">
+                                <i class="fab fa-flickr"></i>
                             </a>
                         </li>
 
