--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                             <li><a href="#contact">CONTACT</a></li>
 
-                            <li class="discover-link"><a href="#" class="external discover-btn">Facebook Page</a></li>
+                            <li class="discover-link"><a href="#" class="external discover-btn">Join Our Facebook Group</a></li>
 
                         </ul>
                         <!--end navbar-nav -->
