--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                     
                                     <p>"I’ve tried several apps for tracking my soap recipes, but nothing compares to Soapah! It’s intuitive, beautifully designed, and packed with features that actually make a difference. Whether you’re making soap for fun or profit, this app is a must-have!"</p>
 
-                                    <h6>Jennifer Smith<span class="job-text"> - London, England</span></h6>
+                                    <h6>Jennifer Oluwaro<span class="job-text"> - London, England</span></h6>
 
                                 </div>
                                 <!--end testim-inner -->
