--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                             <!--end success_box -->
                             
                             <!--begin newsletter-form -->
-                            <form id="newsletter-form" class="newsletter-form" action="php/newsletter.php" method="post">
+                            <form id="newsletter-form" class="newsletter-form" action="php\newsletter.php" method="post">
 
                                 <input id="email_newsletter" type="email" name="nf_email" placeholder="Enter Your Email Address">  
 
