--- a/index.html
+++ b/index.html
@@ -403,6 +403,57 @@
             </div>
             <!--end row -->
 
+            <!--begin row -->
+            <div class="row">
+
+                <!--begin col-md-4-->
+                <div class="col-md-4">
+
+                    <div class="feature-box wow fadeIn" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: fadeIn;">
+
+                        <i class="fas fa-hand-holding-usd"></i>
+
+                        <h4>Inventory</h4>
+
+                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+
+                    </div>
+                </div>
+                <!--end col-md-4 -->
+
+                <!--begin col-md-4-->
+                <div class="col-md-4">
+
+                    <div class="feature-box wow fadeIn" data-wow-delay="1.25s" style="visibility: visible; animation-delay: 1.25s; animation-name: fadeIn;">
+
+                        <i class="fas fa-rocket"></i>
+
+                        <h4>Soaping Tips</h4>
+
+                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+
+                    </div>
+                </div>
+                <!--end col-md-4 -->
+
+                <!--begin col-md-4-->
+                <div class="col-md-4">
+
+                    <div class="feature-box wow fadeIn" data-wow-delay="1.5s" style="visibility: visible; animation-delay: 1.5s; animation-name: fadeIn;">
+
+                        <i class="fab fa-rocketchat"></i>
+
+                        <h4>Guide for Soap Additives</h4>
+
+                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+
+                    </div>
+                </div>
+                <!--end col-md-4 -->
+
+            </div>
+            <!--end row -->
+
         </div>
         <!--end container -->
 
