--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	            <!--begin col-md-6-->
 	            <div class="col-md-6 padding-top-80">
 
-	          		<h1>#1 app for soap makers.</h1>
+	          		<h1> The #1 app for soap makers.</h1>
 
 	          		<p>Soapah was designed for you, the soapmaker, to elevate your soapmaking skills. Download today!</p>
 
