--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
                             <li><a href="#contact">CONTACT</a></li>
 
+                            <li><a href="#features">MERCH</a></li>
+
                             <li class="discover-link"><a href="#" class="external discover-btn">Join Our Facebook Group</a></li>
 
                         </ul>
