--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	            <!--begin col-md-6-->
 	            <div class="col-md-6 padding-top-80">
 
-	          		<h1> The #1 app for soap makers.</h1>
+	          		<h1 style="font-family:Arial, Helvetica, sans-serif; font-weight: 800; font-size: 4rem; color:#AA5486"> The #1 app for soap makers.</h1>
 
 	          		<p>Soapah was designed for you, the soapmaker, to elevate your soapmaking skills. Download today!</p>
 
