--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
                     <div class="feature-box wow fadeIn" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: fadeIn;">
 
-                        <i class="fas fa-hand-holding-usd"></i>
+                        <i class="fa-solid fa-warehouse"></i>
 
                         <h4>Inventory</h4>
 
@@ -508,7 +508,7 @@
 
                     <div class="feature-box wow fadeIn" data-wow-delay="1.25s" style="visibility: visible; animation-delay: 1.25s; animation-name: fadeIn;">
 
-                        <i class="fas fa-rocket"></i>
+                        <i class="fa-solid fa-soap"></i>
 
                         <h4>Soaping Tips</h4>
 
@@ -523,7 +523,7 @@
 
                     <div class="feature-box wow fadeIn" data-wow-delay="1.5s" style="visibility: visible; animation-delay: 1.5s; animation-name: fadeIn;">
 
-                        <i class="fab fa-rocketchat"></i>
+                        <i class="fa-solid fa-book"></i>
 
                         <h4>Guide for Soap Additives</h4>
 
