--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             <div class="card-header" id="headingSix">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                  Very Very Good
+                                  Ask A Question
                                 </button>
                                 </h5>
                             </div>
