--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                 <!--begin col-md-6-->
                 <div class="col-md-6 padding-top-20">
 
-                	<h3>Get ready to discover all the benefits and secrets of our amazing software.</h3>
+                	<h3>Get ready to discover the #1 app for soap makers around the world!</h3>
 
                 	<p>Velis demo enim ipsam voluptatem quia voluptas sit aspernatur netsum lorem fugit, sed quia magni dolores eos qui ratione sequi nesciunt neque et poris ratione sequi enim quia tempor magni.</p>
                     
