--- a/index.html
+++ b/index.html
@@ -697,7 +697,9 @@
                 	<ul class="benefits">
 						<li><i class="fa fa-check"></i> Quia magni netsum eos qui ratione sequi.</li>
 						<li><i class="fa fa-check"></i> Venis ratione sequi enim quia tempor magni.</li>
-						<li><i class="fa fa-check"></i> Enim ipsam voluptatem quia voluptas.</li>
+						<li><i class="fa fa-check"></i> Enim ipsam voluptatem Jerry voluptas.</li>
+                        <li><i class="fa fa-check"></i> Enim ipsam voluptatem Mcguire voluptas.</li>
+                        <li><i class="fa fa-check"></i> Enim ipsam voluptatem Jimmy voluptas.</li>
 					</ul>
 
 					<a href="#home" class="btn-blue scrool">DOWNLOAD TODAY</a>
