--- a/index.html
+++ b/index.html
@@ -865,44 +865,44 @@
                     <ul class="footer_social">
 
                         <li>
-                            <a href="https://serrenta.com/">
-                                <i class="fab fa-twitter"></i>
+                            <a href="https://projekx.com/">
+                                <i class="fa-solid fa-comments"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://serrenta.com/">
-                                <i class="fab fa-youtube"></i>
+                            <a href="https://robbhub.com/">
+                                <i class="fa-solid fa-download"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://serrenta.com/">
-                                <i class="fab fa-facebook-square"></i>
+                            <a href="https://hostrobb.com/">
+                                <i class="fa-solid fa-cloud"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://serrenta.com/">
-                                <i class="fab fa-instagram"></i>
+                            <a href="https://robbmg.com/">
+                                <i class="fa-solid fa-music"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://serrenta.com/">
-                                <i class="fab fa-tiktok"></i>
+                            <a href="https://robbtv.com/">
+                                <i class="fa-solid fa-video"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://serrenta.com/">
-                                <i class="fab fa-discord"></i>
+                            <a href="https://geniusempirecorp.com/">
+                                <i class="fa-solid fa-gamepad"></i>
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://serrenta.com/">
-                                <i class="fab fa-flickr"></i>
+                            <a href="https://urhiredjobs.com/">
+                                <i class="fa-solid fa-business-time"></i>
                             </a>
                         </li>
 
