--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
                     <ul class="footer_social">
 
                         <li>
-                            <a href="https://projekx.com/">
+                            <a href="https://projekxhub.com/">
                                 <i class="fa-solid fa-comments"></i>
                             </a>
                         </li>
