--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
                             <li><a href="#contact">CONTACT</a></li>
 
-                            <li><a href="https://shop.theurbanblvd.com/collections/soapah">MERCH</a></li>
+                            <li class="discover-link"><a href="https://shop.theurbanblvd.com/collections/soapah" class="external discover-btn1">MERCH</a></li>
 
-                            <li class="discover-link"><a href="#" class="external discover-btn">Join Our Facebook Group</a></li>
+                            <li class="discover-link"><a href="https://shop.theurbanblvd.com/collections/soapah" class="external discover-btn">Join Our Facebook Group</a></li>
 
                         </ul>
                         <!--end navbar-nav -->
