--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 	          		<h1 style="font-family:Arial, Helvetica, sans-serif; font-weight: 800; font-size: 4rem; color:#AA5486"> The #1 app for soap makers.</h1>
 
-	          		<p>Soapah is an all in one app that helps soap makers to make their own formulations as well as using many of the ready to go, tried and true formulas already added, schedule their production, keep track of their batches and makes it fun to share their progress with other soap makers. Download today!</p>
+	          		<p>Soapah is an all in one app that helps soap makers to make their own formulations as well as using many of the ready to go, tried and true formulas already added, schedule their production, keep track of their batches and makes it fun to share their progress with other soap makers. <b>Download today!</b></p>
 
 	        		<a href="#" class="fa-brands fa-android btn-blue scrool"> Android</a><br><br>
                     <a href="#" class="fa-brands fa-apple btn-green scrool"> IOS</a>
@@ -672,6 +672,8 @@
             </div>
             <!--end row -->
 
+            <center><a href="#" class="fa-brands fa-android btn-blue scrool"> Android</a> <a href="#" class="fa-brands fa-apple btn-green scrool"> IOS</a></center>
+            
         </div>
         <!--end container -->
 
