--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                             <div class="card-header" id="headingSeven">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                                  Very Very Good
+                                  Who created Soapah?
                                 </button>
                                 </h5>
                             </div>
@@ -292,7 +292,7 @@
                             <div class="card-header" id="headingEight">
                                 <h5 class="mb-0">
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                                  Very Very Good
+                                  Do you offer customer support?
                                 </button>
                                 </h5>
                             </div>
