--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                             <li class="discover-link"><a href="https://shop.theurbanblvd.com/collections/soapah" class="external discover-btn1">MERCH</a></li>
 
-                            <li class="discover-link"><a href="https://shop.theurbanblvd.com/collections/soapah" class="external discover-btn">Join Our Facebook Group</a></li>
+                            <li class="discover-link"><a href="https://www.facebook.com/groups/soapah" class="external discover-btn">Join Our Facebook Group</a></li>
 
                         </ul>
                         <!--end navbar-nav -->
