--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
 
                         <i class="fas fa-tachometer-alt"></i>
 
-                        <h4>Guided Formulation</h4>
+                        <h4>Soapah Recipes</h4>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim. (premium subscription required.)</p>
+                        <p>Does creating a formula yourself overwhelm you and you just want a tried and true formula with the oils you already have at your disposal? You are right! It shouldn’t be that hard. Tell us what you want to use, we will most probably have a formula for you. If we don’t, shoot us a message and you will not be disappointed!</p>
 
                     </div>
                 </div>
@@ -410,7 +410,7 @@
 
                         <h4>Soap Calculator</h4>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+                        <p>Let’s create a recipe together. Here you can enter whoever oils/butters/waxes and other additional items you would like and we calculate what you need.</p>
 
                     </div>
                 </div>
@@ -442,11 +442,11 @@
 
                     <div class="feature-box wow fadeIn" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: fadeIn;">
 
-                        <i class="fas fa-hand-holding-usd"></i>
+                        <i class="fa-solid fa-calendar-days"></i>
 
                         <h4>Calendar</h4>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+                        <p>Calendar of soaps. Do you know which soaps you will be making this month, or the next? Do you keep forgetting which one you were supposed to do or feel overwhelmed with so many different soaps you need to make and want to organize your thoughts? This is the place you can schedule all that. Ps: It is also amazing to be able to share with your friends what you did or what you intend to make in a very cute way.</p>
 
                     </div>
                 </div>
@@ -461,7 +461,7 @@
 
                         <h4>Batch Record</h4>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+                        <p>Keep track of your beautiful creations in a professional way. Create batch numbers and take notes of your additions and process. Do not ever lose an amazing fragrance mix or formula that you have created because you haven’t recorded it anywhere.</p>
 
                     </div>
                 </div>
@@ -472,11 +472,11 @@
 
                     <div class="feature-box wow fadeIn" data-wow-delay="1.5s" style="visibility: visible; animation-delay: 1.5s; animation-name: fadeIn;">
 
-                        <i class="fab fa-rocketchat"></i>
+                        <i class="fa-solid fa-people-group"></i>
 
-                        <h4>Give Feedback</h4>
+                        <h4>Community</h4>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+                        <p>If you need more help about your formulas or method or if you want to be a part of our creative spirit, you are welcome to our Facebook group. We are a friendly group with admins there to help with all your questions and members both helping each other and sharing their beautiful soaps to spread the joy and beauty.</p>
 
                     </div>
                 </div>
@@ -525,9 +525,9 @@
 
                         <i class="fa-solid fa-book"></i>
 
-                        <h4>Guide for Soap Additives</h4>
+                        <h4>Learning Center</h4>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper suscipit ets lobotis nisle consequat nihis etim.</p>
+                        <p>Check out the tips and tricks and a whole treasure cove of information from our experienced soap makers. Do you want to know which natural colorant actually do work in soap making or do you want to know how much essential oils you should or could use? This is where you find out all that and much more.</p>
 
                     </div>
                 </div>
