--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 
                             <li><a href="#features">FEATURES</a></li>
 
+                            <li><a href="#pricing">PRICING</a></li>
+
                             <li><a href="#contact">CONTACT</a></li>
 
                             <li class="discover-link"><a href="https://shop.theurbanblvd.com/collections/soapah" class="external discover-btn1">MERCH</a></li>
