--- a/index.html
+++ b/index.html
@@ -544,6 +544,59 @@
     </section>
     <!--end services section -->
 
+    <section class="section-white section-bottom-border" id="pricing">
+
+        <div class="col-md-12 text-center padding-bottom-10">
+
+            <h2 class="section-title">Soapah's Pricing</h2>
+
+            <p class="section-subtitle">We have carefully crafted our pricing to accomodate soapmakers on all levels.<br>We're also available if you amazing soapmakers have any questions.</p>
+
+        </div>
+
+    <div class="columns">
+        <ul class="price">
+          <li class="header">Free</li>
+          <li class="grey">$ 0.00 / month</li>
+          <li>✔ Access To Soapah's Calculator</li>
+          <li>✔ Save One Recipe</li>
+          <li>✔ Access to The Facebook Group</li>
+          <li>✔ </li>
+          <li>✔ </li>          
+          <li class="grey"><a href="#" class="button">Sign Up</a></li>
+        </ul>
+      </div>
+
+      <div class="columns">
+        <ul class="price">
+          <li class="headerpro">Pro</li>
+          <li class="grey">$ 3.99 / month</li>
+          <li>✔ Everything In Free</li>
+          <li>✔ Unlimited Saved Recipes</li>
+          <li>✔ Access to Soapah's Recipes</li>
+          <li>✔ </li>
+          <li>✔ </li>
+          <li class="grey"><a href="#" class="button">Sign Up</a></li>
+        </ul>
+      </div>
+
+      <div class="columns">
+        <ul class="price">
+          <li class="header">Premium</li>
+          <li class="grey">$ 9.99 / month</li>
+          <li>✔ ?Everything In Pro</li>
+          <li>✔ Acess to The Learning Center</li>
+          <li>✔ Live Expert</li>
+          <li>✔ Exclusive Events Invites</li>
+          <li>✔ </li>
+          <li class="grey"><a href="#" class="button">Sign Up</a></li>
+        </ul>
+      </div>
+
+    </section>
+
+    <br>
+
     <!--begin testimonials section -->
     <section class="section-grey medium-paddings section-bottom-border">
 
