--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
     <div class="columns">
         <ul class="price">
           <li class="header">Free</li>
-          <li class="grey">$ 0.00 / month</li>
+          <li class="grey">$0.00 / month</li>
           <li>✔ Access To Soapah's Calculator</li>
           <li>✔ Save One Recipe</li>
           <li>✔ Access to The Facebook Group</li>
@@ -570,7 +570,7 @@
       <div class="columns">
         <ul class="price">
           <li class="headerpro">Pro</li>
-          <li class="grey">$ 3.99 / month</li>
+          <li class="grey">$3.99 / month</li>
           <li>✔ Everything In Free</li>
           <li>✔ Unlimited Saved Recipes</li>
           <li>✔ Access to Soapah's Recipes</li>
@@ -583,8 +583,8 @@
       <div class="columns">
         <ul class="price">
           <li class="header">Premium</li>
-          <li class="grey">$ 9.99 / month</li>
-          <li>✔ ?Everything In Pro</li>
+          <li class="grey">$9.99 / month</li>
+          <li>✔ Everything In Pro</li>
           <li>✔ Acess to The Learning Center</li>
           <li>✔ Live Expert</li>
           <li>✔ Exclusive Events Invites</li>
