--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 	          		<h1 style="font-family:Arial, Helvetica, sans-serif; font-weight: 800; font-size: 4rem; color:#AA5486"> The #1 app for soap makers.</h1>
 
-	          		<p>Soapah is an all in one app that helps soap makers to make their own formulations as well as using many of the ready to go, tried and true formulas already added, schedule their production, keep track of their batches and makes it fun to share their progress with other soap makers. <b>Download today!</b></p>
+	          		<p>Soapah is an all-in-one app that helps soap makers make their own formulations or use many of the ready-to-go, tried-and-true formulas already added. It also schedules production, keeps track of batches, and makes it fun to share progress with other soap makers. <b>Download today!</b></p>
 
 	        		<a href="#" class="fa-brands fa-android btn-blue scrool"> Android</a><br><br>
                     <a href="#" class="fa-brands fa-apple btn-green scrool"> IOS</a>
